--- a/css/index.css
+++ b/css/index.css
@@ -242,7 +242,7 @@ body {
 	color: var(--clr-black);
 }
 
-.random-meal-desc > h5 {
+.random-meal-desc h5 {
 	display: flex;
 	align-items: center;
 	flex-basis: 25%;
@@ -250,7 +250,7 @@ body {
 	height: 1.5rem;
 }
 
-.random-meal-desc > h6 {
+.random-meal-desc h6 {
 	display: flex;
 	align-items: center;
 	flex-basis: 70%;
@@ -327,15 +327,21 @@ body {
 	display: flex;
 	justify-content: center;
 	position: relative;
+	flex-direction: column;
 	margin-bottom: 40px;
 }
 
 .searched-meal {
-	width: 100%;
 	margin: 0 20px 20px 20px;
 	border-radius: 5px;
-	overflow: hidden;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+	overflow: hidden;
+}
+
+.search-meal-details {
+	background-color: var(--clr-orange);
+	width: 90%;
+	height: 97%;
 }
 
 .searched-meal-info {
@@ -343,21 +349,28 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	height: 40px;
+	margin-bottom: 10px;
 }
 
-.img-searched-meal {
+.searched-meal-img {
 	width: 100%;
 }
 
-.searched-meal-info > h4 {
+.searched-meal-info a {
 	color: var(--clr-black);
 	font-size: 0.9em;
-	margin: 0 0 5px 10px;
 	cursor: pointer;
+	font-weight: bold;
 }
 
-#meal-img-heart {
+.searched-meal-heart {
 	position: relative !important;
 	margin-bottom: 5px;
 	cursor: pointer;
+}
+
+.searched-meal-title {
+	padding-left: 10px;
+	font-size: 0.9rem;
+	color: var(--clr-black);
 }
